--- a/src/app/pages/players/players.component.scss
+++ b/src/app/pages/players/players.component.scss
@@ -1,6 +1,13 @@
 .cards-container {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  padding: 50px;
+  justify-content: center;
+  gap: 24px;
+}
+
+.empty-alert {
+  font-size: 60px;
+  color: rgb(192, 192, 192);
+  padding: 0;
+  margin: 0;
 }
